# agent-market-place

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  UPGRADE_SAAS.md  netlify.toml  pyproject.toml  requirements.txt
backend/: .env.example  pyproject.toml  requirements.txt
backend/scripts/migrations/: 000_cleanup.sql  001_init_schema.sql  002_fix_get_user_usage.sql  002_update_pro_pricing.sql  003_add_increment_usage.sql  003_webhook_replay_protection.sql  004_agent_key_1to1.sql  004_agent_traces.sql  005_add_conversation_analytics.sql  005_fix_validate_api_key.sql  006_rollback_to_v2.sql  007_add_llm_provider_columns.sql  008_cleanup_functions.sql  009_add_stripe_subscription_id_to_profiles.sql  010_budget_limits.sql  010_restructure_plans.sql  011_detailed_usage_logs.sql  011_fix_realtime_counts.sql  012_fix_check_user_limits.sql  013_add_agent_memory_and_archive.sql  014_fix_agent_memory_ambiguity.sql  README.md
backend/src/agents/: perplexity_agent.py
backend/src/api/: __init__.py  auth.py  deps.py  main.py  middleware.py  routes.py  routes_admin.py  routes_agent.py  routes_agent_config.py  routes_assistant.py  routes_auth.py  routes_billing.py  routes_console.py  routes_help.py  routes_jobs.py  routes_keys.py  schemas.py
backend/src/config/: logging_config.py  redis.py  settings.py
backend/src/models/: __init__.py  agent.py  api_key.py  conversation.py  document.py  subscription.py  user.py
backend/src/providers/: __init__.py  base.py  github_provider.py  linkedin_provider.py  pdf_provider.py
backend/src/repositories/: __init__.py  agent_memory_repository.py  agent_repository.py  api_key_repository.py  base.py  conversation_repository.py  document_repository.py  subscription_repository.py  user_repository.py
backend/tests/: conftest.py
(+184 files in other folders)
